samples/_failures_safe/1761143355_a1b982_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1f94ddb1.c: In function ‘main’:
./samples/SAFE/__tmp_1f94ddb1.c:196:12: error: missing terminating " character
  196 |     printf("Tokens found: %d
      |            ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1f94ddb1.c:196:5: error: expected expression at end of input
  196 |     printf("Tokens found: %d
      |     ^~~~~~
./samples/SAFE/__tmp_1f94ddb1.c:196:5: error: expected declaration or statement at end of input
